--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.username=postgres
 spring.datasource.password=novasenha
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.web.resources.static-locations=file:uploads/
+spring.web.resources.static-locations=classpath:/static/,file:${user.dir}/uploads/imagens/
